+ add overflow hidden to avoid overflow when scale, add caret, some more
block

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,6 @@
 .fluid-img {
     width: 100%;
     height: 100%;
-    background-size: cover;
     cursor: pointer;
 
     transition: all .5s ease;
@@ -52,7 +51,7 @@ body {
     .text-subheading { @apply lg:text-base font-light text-gray-500 sm:text-sm;}
 
     .btn-primary-uppercase {
-        @apply py-3 px-5 text-white rounded bg-primary font-medium uppercase tracking-wide;
+        @apply py-2 px-5 text-white rounded bg-primary font-medium uppercase tracking-wide;
     }
 
     .btn-primary {
@@ -63,5 +62,9 @@ body {
         display: table;
         clear: both;
         content: "";
+    }
+
+    .dropdown-arrow::after {
+        content: "\25bc";
     }
 }
